// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WholesaleText /> should render with props 1`] = `
<WholesaleText
  description="<b>lorem</b>"
  price={222222}
>
  <div
    className="wholesale-text-wrapper"
  >
    <span
      className="wholesale-text"
      onClick={[Function]}
      role="note"
    />
  </div>
</WholesaleText>
`;

exports[`<WholesaleText /> should render without props 1`] = `
<WholesaleText>
  <div
    className="wholesale-text-wrapper"
  >
    <span
      className="wholesale-text"
      onClick={[Function]}
      role="note"
    />
  </div>
</WholesaleText>
`;
